Fix: Achieve mathematically precise 20px footer spacing

--- a/src/client/stylesheets/components/_defra-footer.scss
+++ b/src/client/stylesheets/components/_defra-footer.scss
@@ -9,28 +9,26 @@
 
 .defra-footer__meta {
   display: flex;
-  flex-wrap: wrap;
-  align-items: flex-end;
+  flex-direction: column;
+  align-items: flex-start;
   justify-content: flex-start;
-  gap: 15px;
+  gap: 20px;
 }
 
 .defra-footer__meta-item {
-  flex-grow: 1;
-  flex-basis: 100%;
-  text-align: left;
+  width: 100%;
 }
 
 .defra-footer__inline-list {
-  margin: 0 0 15px;
+  margin: 0;
   padding: 0;
   list-style: none;
 }
 
 .defra-footer__inline-list-item {
   display: inline-block;
-  margin-right: 15px;
-  margin-bottom: 5px;
+  margin-right: 20px;
+  margin-bottom: 0;
 
   &:last-child {
     margin-right: 0;
